public/static/css/main.css
/* ... */
@media (min-width:1024px){
  .latest-video__list{
    flex:0 0 43.9rem;
    max-width:43.9rem;
    margin-left:2rem;
  }
}

.related-post{
  padding:6rem 0;
  margin:6rem 0;
  background-color:#f5f5f6;
}

.photo-slider{
  margin-top:3rem;
}
.photo-slider img{
  height:auto;
  max-width:100%;
  width:100%;
}

.photo-nav{
  margin-top:1rem;
}
.photo-nav__slide{
  cursor:pointer;
  padding-right:1rem;
}

.point-heading{
  position:relative;
  z-index:2;
  margin:6rem 0;
}

.point-tab{
  margin-top:6rem;
}

.faq-section{
  padding:3rem 0;
  background-color:#ebebeb;
}
@media (min-width:1024px){
  .faq-section{
    padding:6rem 0;
  }
}

.faq-list{
  margin-top:3rem;
}

.tnc-section{
  padding:6rem 0;
  line-height:1.375;
}
.tnc-section ol,.tnc-section ul{
  padding-left:1em;
}

a{
  text-decoration:none;
  color:#2525bb;
}

p{
  line-height:1.625;
}

.semibold{
  font-weight:600 !important;
}

.fs-18{
  font-size:1.8rem;
}
@media (max-width:1024px){
  .fs-18{
    font-size:calc(.57rem + 1.20117vw);
  }
}

.search-input{
  padding-left:1rem !important;
  padding-right:3rem !important;
}

.search-btn-icon{
  position:absolute;
  top:.5rem;
  right:1.5rem;
  height:2.4rem;
  width:2.4rem;
  padding:0;
  background-color:transparent;
  border:0;
}
.search-btn-icon img{
  max-width:100%;
  height:auto;
  width:100%;
}

.svg-plus{
  height:16px;
  width:16px;
}

.svg-video-frame{
  display:block;
  height:162px;
  width:284px;
}
@media (min-width:1024px){
  .svg-video-frame--large{
    height:386px;
    width:681px;
  }
}
.svg-video-frame--small{
  height:117px;
  width:209px;
}

.svg-vid-play{
  display:block;
  height:25px;
  width:36px;
}
.svg-vid-play--large{
  height:35px;
  width:50px;
}

.svg-clock{
  height:16px;
  width:16px;
}

.stat-with-icon{
  -js-display:flex;
  display:flex;
  flex-flow:row nowrap;
}
.stat-with-icon__icon{
  margin-right:.5rem;
}
.stat-with-icon__text{
  color:#000;
  font-weight:600;
  font-size:1.2rem;
}

.placement{
  margin:2rem 0;
}
@media (min-width:1024px){
  .placement{
    margin:3rem auto;
    width:960px;
  }
}
.placement img{
  display:block;
  margin:0 auto;
  height:auto;
  max-width:100%;
  width:auto;
}
.placement--top-margin-0{
  margin-top:0;
}

.slick-arrow-crimson{
  padding:2.5rem;
  background-color:#ec2427;
}
.slick-arrow-crimson:hover{
  background-color:#e31417;
}
.slick-arrow-crimson [class^=arrow]{
  color:#fff;
  top:-8px;
  right:8px;
  width:18px;
  height:18px;
  border-width:4px 4px 0 0;
}
.slick-arrow-crimson [class^=arrow]:before{
  height:4px;
  width:24px;
}

.slick-arrow-white{
  padding:2rem;
  background-color:#fff;
}
.slick-arrow-white [class^=arrow]{
  color:#000;
  top:-5px;
  right:5px;
}
.slick-arrow-white:hover{
  background-color:#000;
}
.slick-arrow-white:hover [class^=arrow]{
  color:#fff;
}

.slick-list{
  z-index:1;
}

.slick-arrow{
  z-index:2;
}

.group-legend{
  margin-top:6rem;
  margin-bottom:2rem !important;
  font-family:Montserrat,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size:2.2rem;
  font-weight:700;
}
@media (max-width:1024px){
  .group-legend{
    font-size:calc(.67rem + 1.49414vw);
  }
}
.group-legend--top-margin-small{
  margin-top:3rem;
}

.parsley-errors-list{
  margin:0;
  padding-left:0;
  font-size:1.1rem;
  color:#ec2427;
  list-style:none;
}
.home-promo-slider,.home-promo-slider__slide{
  width:100%;
}
.home-promo-slider img{
  height:auto;
  max-width:100%;
  width:100%;
}

.search-result{
  display:none;
}
.search-result.active{
  display:block;
}

.sidebar{
  padding:0;
  will-change:min-height;
}
.sidebar .inner-wrapper-sticky{
  padding-left:1rem;
}

.sidebar__inner{
  transform:translate(0);
  transform:translateZ(0);
  will-change:position, transform;
}

.site-header{
  display:none;
}
@media (min-width:1280px){
  .site-header{
    display:block;
    height:8rem;
    position:relative;
    z-index:2;
    background-color:#000;
    color:#fff;
  }
}

.site-logo{
  z-index:3;
}
.site-logo,.site-logo img{
  height:10rem;
  width:12.5rem;
}

.mobile-header{
  position:fixed;
  -js-display:flex;
  display:flex;
  align-items:center;
  top:0;
  left:0;
  padding:0 10px;
  height:60px;
  width:100%;
  background-color:#000;
  z-index:3;
}
@media (min-width:1280px){
  .mobile-header{
    display:none;
  }
}
.mobile-header .mobile-menu-trigger{
  position:absolute;
  top:50%;
  margin-top:-3rem;
  left:0;
  outline:none;
}
.mobile-header .site-logo{
  margin-left:auto;
  margin-top:2rem;
}

.search-form{
  display:none;
  position:fixed;
  top:80px;
  left:0;
  height:4rem;
  width:100%;
  z-index:2;
  background-color:#000;
}
.search-form.active{
  display:block;
}

.mobile-nav{
  position:fixed;
  top:60px;
  left:0;
  height:100vh;
  max-width:32rem;
  width:100%;
  transition:transform .3s linear;
  transform:translateX(-100%);
  z-index:500;
  background-color:#000;
}
@media (min-width:1280px){
  .mobile-nav{
    display:none;
  }
}
.mobile-nav.active{
  transform:translateX(0);
}
.mobile-nav ul{
  padding:2rem;
  margin:0;
  list-style:none;
}
.mobile-nav li{
  margin-bottom:2.5rem;
}
.mobile-nav .search,.mobile-nav li{
  position:relative;
}
.mobile-nav a{
  font-family:Montserrat,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  color:#fff;
}
.mobile-nav .has-sub-menu:before{
  border-color:#fff;
  border-style:solid;
  border-width:2px 2px 0 0;
  content:"";
  display:inline-block;
  height:1.2rem;
  position:absolute;
  vertical-align:top;
  width:1.2rem;
  transform:rotate(45deg);
  margin-top:-.6rem;
  top:50%;
  right:0;
}
.mobile-nav .separator{
  height:1px;
  width:100%;
  background-color:#fff;
}
.mobile-nav .menu a{
  display:block;
  width:100%;
}
/* ... */

